--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.35"
+clap = { version = "4.5.19", features = ["derive"] }
 itertools = "0.12.1"
 kamadak-exif = "0.5.5"
